working in styling the website

--- a/account/static/account/css/base.css
+++ b/account/static/account/css/base.css
@@ -133,3 +133,11 @@ li.inline-top {
 
 }
 
+/* cookie banner */
+.cc_b_cp {
+    display: none;
+}
+
+.light.cc_dialog button.cc_b_ok {
+    background-color: #1e81cc;
+}
