--- a/club/static/club/css/list_view.css
+++ b/club/static/club/css/list_view.css
@@ -179,4 +179,15 @@ a.toggle:active {
 }
 
 
+.step-links {
+    margin-left: 40px;
+}
 
+hr {
+    margin-left: 39px;
+    color: #1e81cc;
+}
+
+.paginator {
+    color: #1e81cc;
+}
