--- a/landing/templates/landing/landing_page.html
+++ b/landing/templates/landing/landing_page.html
@@ -32,7 +32,9 @@
 <div class="page page-two" id="page2">
 
     <span class="head-text">Read <span class="together">together</span></span>
-    <span class="under-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porta lorem mollis aliquam ut porttitor leo a diam sollicitudin. A iaculis at erat pellentesque adipiscing. Nunc consequat interdum varius sit. Amet cursus sit amet dictum. Hac habitasse platea dictumst quisque sagittis purus sit amet volutpat.</span>
+    <span class="under-text">Have you ever stopped a book halfway through because you lost motivation? This doesn't
+        have to happen. Join or create a book club! Share you progress with other people and motivate each other
+        to finish that book that you've always wanted to get through.</span>
     <img src="{% static 'landing/images/anti_gravity.png' %}" width="750" class="img-page-2">
     <a href='https://www.freepik.com/free-photos-vectors/background' class="img-link link-2" target="_blank">
         Background vector created by freepik - www.freepik.com</a>
@@ -43,7 +45,9 @@
 
 <div class="page page-three" id="page3">
     <span class="head-text">Discuss <span class="together">together</span></span>
-    <span class="under-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porta lorem mollis aliquam ut porttitor leo a diam sollicitudin. A iaculis at erat pellentesque adipiscing. Nunc consequat interdum varius sit. Amet cursus sit amet dictum. Hac habitasse platea dictumst quisque sagittis purus sit amet volutpat.</span>
+    <span class="under-text">Share your thoughts and feelings about a book with other people who understand what you
+        are talking about. Whether you want a book recommendation, talk about a book you've read or just share
+        your thoughts, this can all be done here. Just create or join a club and get going!</span>
     <img src="{% static 'landing/images/talk_together.png' %}" width="750" class="img-page-3">
     <a href="http://www.freepik.com" class="img-link link-3" target="_blank">Designed by rawpixel.com / Freepik</a>
      <a href="#page4" class="hvr-hang hang-3">
@@ -53,9 +57,13 @@
 
 <div class="page page-four" id="page4">
     <span class="head-text">Learn <span class="together">together</span></span>
-    <span class="under-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Porta lorem mollis aliquam ut porttitor leo a diam sollicitudin. A iaculis at erat pellentesque adipiscing. Nunc consequat interdum varius sit. Amet cursus sit amet dictum. Hac habitasse platea dictumst quisque sagittis purus sit amet volutpat.</span>
+    <span class="under-text">How do you make, what you've just read stick? By talking about it with other people!
+        And this is the perfect place to do exactly that. So if you want to keep the most important points of the
+        book you've just read, talk about it with other people!
+        For that just join or create a discussion club and you're ready to go!
+</span>
     <img src="{% static 'landing/images/learn_together.png' %}" width="750" class="img-page-4">
-    <a href="http://www.freepik.com" class="img-link link-4 target="_blank">Designed by rawpixel.com / Freepik</a>
+    <a href="http://www.freepik.com" class="img-link link-4" target="_blank">Designed by rawpixel.com / Freepik</a>
      <a href="#page1" class="hvr-hang up">
         <i class="fas fa-angle-double-up"></i>
     </a>
