--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -46,6 +46,10 @@
                     <a href="{% url 'account:edit' %}" class="top-item {% if section == 'profile' %}selected{% endif %}">My Profile</a>
                 </li>
 
+                <li class="inline-top {% if section == 'about' %}selected{% endif %}">
+                    <a href="{% url 'account:about' %}" class="top-item {% if section == 'about' %}selected{%endif %}">About</a>
+                </li>
+
         {% else %}
             <li class="inline-top {% if section == 'dashboard' %}selected{% endif %}">
                 <a href="{% url 'account:dashboard' %}" class="top-item {% if section == 'dashboard' %}selected{% endif %}">Dashboard</a>
@@ -70,11 +74,27 @@
     </div>
     </li>
     </ul>
+
 <script src="https://code.jquery.com/jquery-3.5.0.js"
         integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
         crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.1/dist/jquery.validate.js"></script>
+<script src="{% static 'account/noframework.waypoints.min.js' %}"></script>
+<script src="{% static 'account/infinite.min.js' %}"></script>
+
+
+<!-- Cookie Consent by https://www.PrivacyPolicies.com -->
+<script type="text/javascript" src="//www.privacypolicies.com/public/cookie-consent/3.1.0/cookie-consent.js"></script>
+<script type="text/javascript">
+document.addEventListener('DOMContentLoaded', function () {
+cookieconsent.run({"notice_banner_type":"interstitial","consent_type":"express","palette":"light","language":"en"});
+});
+</script>
+
+
+<noscript>Cookie Consent by <a href="https://www.PrivacyPolicies.com/cookie-consent/">Privacy Policies</a></noscript>
+<!-- End Cookie Consent -->
 
 
 <script>
@@ -91,6 +111,7 @@
       }
     });
     $(document).ready(function(){
+
       {% block domready %}
       {% endblock %}
        });
