--- a/book/static/book/css/landing.css
+++ b/book/static/book/css/landing.css
@@ -24,7 +24,7 @@ a:not(.up):not(.account-btn){
 
 a.up {
     display: inline-block;
-    margin-top: 12%;
+    margin-top: 17%;
     margin-left: 50%;
     color: white;
 }
@@ -80,11 +80,11 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
 }
 
 .hang-2 {
-    margin-top: 12%;
+    margin-top: 19%;
 }
 
 .hang-3 {
-  margin-top: 12%;
+  margin-top: 9%;
 }
 
 .fa-angle-double-up {
@@ -224,6 +224,7 @@ input[type="file"] > input[type="button"]::-moz-focus-inner {
     margin-right: 56.2%;
     font-size: 1.8em;
     font-weight: bold;
+    color: white;
 }
 
 img {
@@ -237,16 +238,16 @@ img {
     }
 
 .img-page-2 {
-    margin-top: -31%;
+    margin-top: -27%;
 }
 
 .img-page-3 {
-    margin-top: -29%;
+    margin-top: -22%;
 }
 
 
 .img-page-4 {
-    margin-top: -26%;
+    margin-top: -22%;
 
 }
 
