--- a/club/templates/club/edit_club.html
+++ b/club/templates/club/edit_club.html
@@ -3,6 +3,7 @@
 {% block title %}Edit Club{% endblock %}
 
 {% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'club/css/create_club.css' %}">
 <style>
     .hide {
         visibility:hidden;
@@ -12,8 +13,21 @@
         display: none;
 
     }
-</style>
 
+    #delete {
+        background-color: #cc393e;
+    }
+
+    /* quick fix, fix later  */
+    .ajaximage {
+        display: none;
+    }
+
+    label[for="id_group_image"] {
+        display: none;
+    }
+
+</style>
 {% endblock %}
 
 {% block content %}
@@ -67,7 +81,15 @@
 
 {% block domready %}
 
+var removeLinkEl = document.getElementsByClassName("file-remove")[0];
 
+function removeImage(e) {
+    document.getElementsByClassName("file-img")[0].style.display="none";
+    document.getElementsByClassName("file-remove")[0].style.display = "none";
+
+}
+
+removeLinkEl.addEventListener("click", removeImage);
 
 
 {% endblock %}
