--- a/club/templates/club/reading_club_detail.html
+++ b/club/templates/club/reading_club_detail.html
@@ -70,7 +70,7 @@
 
         {% endif %}
         <div class="slidervalue">
-            Club reading goal, page
+            Goal: Page
             <span id="current-page">0</span>
 
         </div>
