ready to deploy

--- a/account/templates/base_slim.html
+++ b/account/templates/base_slim.html
@@ -1,11 +1,16 @@
 {% load static %}
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <base target="_parent"> <!-- Open links in iframe window in the parent window !-->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/base_slim.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'account/css/base_slim.css' %}"/>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'
+     https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css
+     https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"/>
+
+
+
 {% block css %}{% endblock %}
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"></head>
 <body>
