--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'account/css/base.css' %}"/>
+    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'
+     https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css
+     https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"/>
     {% block head %}
     {% endblock %}
 
