--- a/book/templates/book/list_view.html
+++ b/book/templates/book/list_view.html
@@ -4,6 +4,9 @@
 {% load el_pagination_tags %}
 {% load static %}
 {% block title %}All books{% endblock %}
+
+
+
 {% block css %}
 <style>
     .hide {
@@ -135,7 +138,7 @@
     (function (){
 
         changedStatusBooks = {};
-        var counter = {{ books.count }}
+        var counter = {{ books.count }};
         for(i=0; i < counter; i++) {
             var currentBook = books[i];
 
