CSP working but not very safe. Working to make it safer.

--- a/account/templates/base.html
+++ b/account/templates/base.html
@@ -1,17 +1,23 @@
 {% load static %}
-<!DOCTYPE html>
 <html lang="en">
 <head>
 
     <meta charset="UTF-8">
-    <!-- Content security policy headers -->
     <meta http-equiv="Content-Security-Policy" content="default-src *; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'; img-src * data: 'unsafe-inline'; connect-src * 'unsafe-inline'; frame-src *;">
     <title>{% block title %}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{% static 'account/css/base.css' %}"/>
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' http://www.google.com">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'
-     https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css
-     https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"/>
+
+
+
+    <!--     Global site tag (gtag.js) - Google Analytics-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-151940591-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-151940591-1');
+    </script>
 
 
     {% block head %}
@@ -29,9 +35,10 @@
     </style>
 
 {% block css %}{% endblock %}
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"></head>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous">
 
 </head>
+
 <body>
      <ul class="menu">
     <div id="header">
